--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
   <button class="todo-button" type="submit">
     <i class="fas fa-plus-square"></i>
   </button>
+  <div class="select">
+    <select name="todo" class="filter-todo">
+      <option value="all">All</option>
+      <option value="completed">Complete</option>
+      <option value="uncompleted">Uncompleted</option>
+    </select>
+  </div>
   </form>
   <div class="to-do-container">
-    <ul class="todo-list">
-
-    </ul>
+    <ul class="todo-list"></ul>
   </div>
 <script src="./app.js"></script>
 </body>
