happy path todo

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <i class="fas fa-plus-square"></i>
   </button>
   <div class="select">
-    <select name="todo" class="filter-todo">
+   <!--  <select name="todo" class="filter-todo">
       <option value="all">All</option>
       <option value="completed">Complete</option>
       <option value="uncompleted">Uncompleted</option>
-    </select>
+    </select> -->
   </div>
   </form>
   <div class="to-do-container">
